# text-agent

./: .gitignore  pyproject.toml  run_game.py
text_agent/: agents.py
utils/: gpt.py  history.py
walkthroughs/: history-agentB-haiku.txt
